# Thales-Remote-Cpp

./: CMakeLists.txt  LICENSE  README.md
DCSequencerExample/: CMakeLists.txt  main.cpp
EisDLLExample/: CMakeLists.txt  main.cpp
EisPad4Example/: CMakeLists.txt  main.cpp
ExternalDeviceFRA/: CMakeLists.txt  main.cpp
FileExchangeExample/: CMakeLists.txt  main.cpp
GeneralExample/: CMakeLists.txt  main.cpp
ThalesRemoteCppLibrary/: CMakeLists.txt  termconnectionerror.cpp  termconnectionerror.h  thalesfileinterface.cpp  thalesfileinterface.h  thalesremoteconnection.cpp  thalesremoteconnection.h  thalesremoteerror.cpp  thalesremoteerror.h  thalesremotescriptwrapper.cpp  thalesremotescriptwrapper.h  threadsafequeue.cpp  threadsafequeue.h  zahnererror.cpp  zahnererror.h
ThalesRemoteExternalLibrary/: CMakeLists.txt  cpp_typedefsGetProcAddress.txt  generated.cpp  generated.h  generated_typedef.h
